# IU7_AA

./: .gitignore  README.md
lab_01/: iu7-algan-cicd-student.mk  makefile  plot_even.py  plot_odd.py
lab_01/diagrams/: classic.xml  opt_vinograd_1.xml  opt_vinograd_2.xml  opt_vinograd_3.xml  vinograd_1.xml  vinograd_2.xml
lab_01/report/: analytic_part.tex  conclusion.tex  design_part.tex  experimental_part.tex  intro.tex  links.tex  tech_part.tex  title.tex
lab_02/code/: Cargo.toml  graphics.py
lab_02/diagrams/: iterative.drawio  recursive.drawio
lab_02/report/: analytic_part.tex  conclusion.tex  design_part.tex  experimental_part.tex  intro.tex  links.tex  preambula.tex  tech_part.tex  title.tex
lab_03/code/: stud-unit-test-report.json
lab_03/diagrams/: cfg_iterative.graphml  cfg_recursive.graphml  info_graph_iterative.graphml  info_graph_recursive.graphml  info_history_iterative.graphml  info_history_recurcive.graphml  opt_history_iterative.graphml  opt_history_recurcive.graphml
lab_03/report/: analytic_part.tex  conclusion.tex  design_part.tex  experimental_part.tex  intro.tex  links.tex  tech_part.tex  title.tex
lab_04/: personal_task.md
lab_04/code/: CMakeLists.txt  experimental_graphics.py  generate_graph.py  make_png_from_dot.sh  run.sh  run_experiments.sh  run_tests.sh  test_graph.sh
lab_04/code/include/: ArgsParser.h  Config.h  DijkstraPar.h  DijkstraSeq.h  Experiments.h  Graph.h  JsonResultBuilder.h  Timer.h
lab_04/code/src/: ArgsParser.cpp  DijkstraSeq.cpp  Experiments.cpp  Graph.cpp  JsonResultBuilder.cpp  Main.cpp
lab_04/code/tests/: test_main.cpp
lab_04/diagrams/: dop_thread.graphml  main_thread_1.graphml  main_thread_2.graphml  main_thread_3.graphml  seq_alg.graphml
lab_04/report/: analytic_part.tex  conclusion.tex  design_part.tex  (+5 more)
lab_05/: task.md
lab_05/code/: CMakeLists.txt  average_results.py  generate_graph.py  plot_experiments_time.py  run_experiments.sh  run_pipeline.sh  run_sequental.sh
lab_05/code/include/: Config.h  DijkstraPar.h  DijkstraSeq.h  Timer.h
lab_05/code/src/: DijkstraPar.cpp  Main.cpp  PipelineMain.cpp
lab_06/: common_task.txt  iu7-algan-cicd-student.mk  personal_task.txt
lab_07/: common_task.txt  personal_task.txt
(+77 files in other folders)
